logs/offboard_pkg/build.make.478.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::FlightCircle_nSample()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:302:67: error: ‘change_yaw_circle’ was not declared in this scope
  302 |             if(uav[i].is_GPS_success(uav[i].lla_circle[k], yaw_d, change_yaw_circle))
      |                                                                   ^~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:335: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
